--- a/SanrooLK/Views/AdminOperations/Views/EmployeeDetailsControl.xaml
+++ b/SanrooLK/Views/AdminOperations/Views/EmployeeDetailsControl.xaml
@@ -334,6 +334,269 @@
             </Viewbox>
 
 
+
+            <!-- Edit Icon -->
+            <Viewbox Grid.Column="5"
+                     Grid.Row="4" Margin="0,0,-60,0">
+                <Border Name="btn_addEmploye"
+                        Background="Black"
+                        BorderBrush="Black"
+                        BorderThickness="0"
+                        CornerRadius="10"
+                        Width="60"
+                        Height="60">
+                    <Border.RenderTransform>
+                        <!--Change the properties when it is copied-->
+                        <ScaleTransform x:Name="scaleTransformForaddEmployee" />
+                    </Border.RenderTransform>
+                    <Border.RenderTransformOrigin>
+                        <Point X="0.5" Y="0.5"/>
+                    </Border.RenderTransformOrigin>
+                    <Border.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Hover-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="Black" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Leave-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseDown">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Click-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseUp">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Release-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="1" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="1" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Border.Triggers>
+                    <Border.Effect>
+                        <!--Change the blur rad when it is in normal button format (rad into 10)-->
+                        <DropShadowEffect ShadowDepth="2"
+                                                              BlurRadius="15"
+                                                              Color="Gray"
+                                                              Opacity="0.2"/>
+                    </Border.Effect>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <!--Image of the button-->
+                        <Image Source="https://res.cloudinary.com/dwbw83rrr/image/upload/v1741122400/akar-icons--edit_q72utu.png"
+                               Width="40"
+                               Height="40"
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="10,0,0,0"/>
+                    </Grid>
+                </Border>
+            </Viewbox>
+
+
+
+
+
+
+
+            <!--Delete Button-->
+            <Viewbox Grid.Column="5"
+                     Grid.Row="6" Margin="0,0,-60,0">
+                <Border Name="btn_deleteEmployee"
+                        Background="Black"
+                        BorderBrush="Black"
+                        BorderThickness="0"
+                        CornerRadius="10"
+                        Width="60"
+                        Height="60">
+                    <Border.RenderTransform>
+                        <!--Change the properties when it is copied-->
+                        <ScaleTransform x:Name="scaleTransformFordeleteEmployee" />
+                    </Border.RenderTransform>
+                    <Border.RenderTransformOrigin>
+                        <Point X="0.5" Y="0.5"/>
+                    </Border.RenderTransformOrigin>
+                    <Border.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Hover-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="Black" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Leave-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseDown">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Click-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseUp">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Release-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="1" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="1" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Border.Triggers>
+                    <Border.Effect>
+                        <!--Change the blur rad when it is in normal button format (rad into 10)-->
+                        <DropShadowEffect ShadowDepth="2"
+                                                              BlurRadius="15"
+                                                              Color="Gray"
+                                                              Opacity="0.2"/>
+                    </Border.Effect>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <!--Image of the button-->
+                        <Image Source="https://res.cloudinary.com/dwbw83rrr/image/upload/v1741122400/weui--delete-filled_b6l4qc.png"
+                               Width="40"
+                               Height="40" Grid.ColumnSpan="2" Margin="10,10,10,10"
+                               />
+                    </Grid>
+                </Border>
+            </Viewbox>
+
+
+
+
+            <!--Save Button-->
+            <Viewbox Grid.Column="5"
+                     Grid.Row="14" Margin="0,0,-60,0">
+                <Border Name="btn_saveEmployee"
+                        Background="Black"
+                        BorderBrush="Black"
+                        BorderThickness="0"
+                        CornerRadius="10"
+                        Width="60"
+                        Height="60">
+                    <Border.RenderTransform>
+                        <!--Change the properties when it is copied-->
+                        <ScaleTransform x:Name="scaleTransformForsaveEmployee" />
+                    </Border.RenderTransform>
+                    <Border.RenderTransformOrigin>
+                        <Point X="0.5" Y="0.5"/>
+                    </Border.RenderTransformOrigin>
+                    <Border.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Hover-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="Black" Duration="0:0:0.2"/>
+                                    <!--Color change Mouse Leave-->
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseDown">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Click-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="0.95" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="PreviewMouseUp">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                            To="DarkRed" Duration="0:0:0.1"/>
+                                    <!--Color change Mouse Release-->
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX"
+                                             To="1" Duration="0:0:0.1"/>
+                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleY"
+                                             To="1" Duration="0:0:0.1"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Border.Triggers>
+                    <Border.Effect>
+                        <!--Change the blur rad when it is in normal button format (rad into 10)-->
+                        <DropShadowEffect ShadowDepth="2"
+                                                              BlurRadius="15"
+                                                              Color="Gray"
+                                                              Opacity="0.2"/>
+                    </Border.Effect>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <!--Image of the button-->
+                        <Image Source="https://res.cloudinary.com/dwbw83rrr/image/upload/v1741122400/bx--save_xkh3no.png"
+                               Width="40"
+                               Height="40" Grid.ColumnSpan="2" Margin="10,10,10,10"/>
+                    </Grid>
+                </Border>
+            </Viewbox>
+
+
         </Grid>
     </Viewbox>
 </UserControl>
